add button function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <section>
-  <h1>This is in the app-component</h1>
+  <h1>Databinding soveltaminen - Username</h1>
   <app-username-check></app-username-check>
 </section>
