--- a/src/app/username-check/username-check.component.html
+++ b/src/app/username-check/username-check.component.html
@@ -1,17 +1,19 @@
 <section>
 <!-- <p>username-check works!</p> -->
     <label>Choose Your Username:</label>
-    
+    <p></p>
     <input  type="text"
             placeholder="give an username"
             class="form-control"
             (input)="onUpdateUserName($event)"
             >
     <p></p>
-    <p>{{ userName }}</p> 
+    <p>Your username: {{ userName }}</p> 
     <p></p>
-
-    <button type="button" class="btn btn-primary">Clear</button>
+    <p></p>
+    <button class="btn btn-primary"  
+            [disabled]="userName === ''"
+            (click)="onClearUsername()">Clear</button>
     
    
     
